# rusty_bbs

./: README.md  docker-compose.yml
front/: .dockerignore  .gitignore  .prettierignore  Dockerfile  package.json  tsconfig.json  webpack.config.js
front/src/: index.tsx
front/src/components/: Header.tsx  Home.tsx  Login.tsx  Post.tsx  PostForm.tsx  Posts.tsx
front/src/server/: serve.ts
front/src/template/: index.html
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
server/migrations/2020-07-21-083438_create_posts/: down.sql  up.sql
server/src/: db.rs  handler.rs  main.rs  model.rs  schema.rs
