[package]
name = "server"
version = "0.1.0"
authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0"
failure = "0.1.8"
serde = "1.0.114"
serde_derive = "1.0.114"

[dependencies.chrono]
features = ["serde"]
version = "0.4.13"