[package]
name = "server"
version = "0.1.0"
authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1.0"
actix-web = "2.0.0"
env_logger = "0.7.0"
"log" = "0.4"
serde = "1.0.114"
serde_derive = "1.0.114"
openssl = "*"

[dependencies.chrono]
features = ["serde"]
version = "0.4.13"

[dependencies.diesel]
features = ["postgres", "chrono", "r2d2"]
version = "1.4.5"
